width fixes and scrollbars

--- a/src/app.css
+++ b/src/app.css
@@ -61,4 +61,34 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  *::-webkit-scrollbar {
+    height: 5px;
+    width: 4px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: transparent;
+  }
+
+  *::-webkit-scrollbar-track:hover {
+    background-color: transparent;
+  }
+
+  *::-webkit-scrollbar-track:active {
+    background-color: transparent;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #cccccc;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #e2e2e2;
+  }
+
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #e2e2e2;
+  }
 }
